nav works on mobile, gotta fix jumpy animations tho

--- a/app/assets/scss/base/_media-queries.scss
+++ b/app/assets/scss/base/_media-queries.scss
@@ -1,5 +1,5 @@
 @mixin mobile {
-  @media (max-width: 530px){
+  @media (max-width: 560px){
     @content;
   }
 }
