--- a/app/assets/scss/modules/_layout.scss
+++ b/app/assets/scss/modules/_layout.scss
@@ -43,11 +43,11 @@ main {
 }
 
 .bio, .blog, .portfolio {
+
   width: 75%;
   font-family: 'Poor Story', cursive;
   font-size: 1.4rem;
-  margin-top: 150px;
-  margin: 80px auto;
+  margin: 115px auto;
   background-color: #0009;
   color: white;
   padding: 30px;
@@ -55,7 +55,7 @@ main {
 
   @include mobile {
     width: 85%;
-    margin-top: 50px;
+    margin-top: 150px;
     padding: 25px;
     padding-top: 15px;
     font-size: 1.3rem;
